--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"cross-env": "^7.0.3",
 		"luxon": "^3.6.1",
 		"prismjs": "^1.30.0",
+		"sass": "^1.96.0",
 		"zod": "^3.25.67",
 		"zod-validation-error": "^3.5.2"
 	},
