Add FontAwesome plugin

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"@11ty/eleventy-navigation": "^1.0.4",
 		"@11ty/eleventy-plugin-rss": "^2.0.4",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.2",
-		"eleventy-plugin-blog-tools": "^0.4.1",
 		"cross-env": "^7.0.3",
+		"eleventy-plugin-blog-tools": "^0.4.1",
 		"luxon": "^3.6.1",
 		"prismjs": "^1.30.0",
 		"sass": "^1.96.0",
@@ -50,6 +50,7 @@
 		"zod-validation-error": "^3.5.2"
 	},
 	"dependencies": {
+		"@11ty/font-awesome": "github:11ty/eleventy-plugin-font-awesome",
 		"@zachleat/heading-anchors": "^1.0.5"
 	}
 }
