--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"dependencies": {
 		"@11ty/font-awesome": "github:11ty/eleventy-plugin-font-awesome",
+		"@fortawesome/free-brands-svg-icons": "^7.1.0",
 		"@zachleat/heading-anchors": "^1.0.5"
 	}
 }
