--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "eleventy-base-blog",
-	"version": "9.0.0",
-	"description": "A starter repository for a blog web site using the Eleventy site generator.",
+	"name": "cursed-flaming-skull",
+	"version": "0.0.0",
+	"description": "A tabletop game design blog, built with Eleventy",
 	"type": "module",
 	"scripts": {
 		"build": "npx @11ty/eleventy",
@@ -19,17 +19,13 @@
 		"url": "git://github.com/11ty/eleventy-base-blog.git"
 	},
 	"author": {
-		"name": "Zach Leatherman",
-		"email": "zachleatherman@gmail.com",
-		"url": "https://zachleat.com/"
+		"name": "Ira Fich",
+		"email": "ira.fich@gmail.com",
+		"url": "https://irafich.com/"
 	},
-	"license": "MIT",
+	"license": "All rights reserved",
 	"engines": {
 		"node": ">=18"
-	},
-	"funding": {
-		"type": "opencollective",
-		"url": "https://opencollective.com/11ty"
 	},
 	"bugs": {
 		"url": "https://github.com/11ty/eleventy-base-blog/issues"
